test/types/sync/ferguson/sync-copy-init-cannot-coerce.good
sync-copy-init-cannot-coerce.chpl:3: warning: Initializing a type-inferred variable from a 'sync' is deprecated; apply a 'read??()' method to the right-hand side
sync-copy-init-cannot-coerce.chpl:3: error: cannot initialize 'sync int(64)' from 'sync real(64)' because 'real(64)' is not coercible to 'int(64)'
note: An additional error is hidden. Use --print-additional-errors to see it.
