test/types/sync/ferguson/sync-copy-init-cannot-coerce.chpl

var r : sync real = 100.0;
var i : sync int = r;
